--- a/product.html
+++ b/product.html
@@ -8,8 +8,8 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
     <link href="https://v1.fontapi.ir/css/ShabnamFD" rel="stylesheet" />
-    <link rel="stylesheet" href="/Styles/uikit-rtl.css" />
-    <link rel="stylesheet" href="/Styles/style.css" />
+    <link rel="stylesheet" href="Styles/uikit-rtl.css" />
+    <link rel="stylesheet" href="Styles/style.css" />
     <title>product details</title>
   </head>
   <body>
@@ -290,6 +290,6 @@
     </div>
     <!-- Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-    <script src="/Script/javascript.js"></script>
+    <script src="Script/javascript.js"></script>
   </body>
 </html>
