--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-6 d-flex flex-column align-items-center SideImage">
-          <img src="/Image/بنر-اخوان.jpg" alt="" />
+          <img src="Image/بنر-اخوان.jpg" alt="" />
           <img src="https://kitchenkit.ir/upload/stswiper/%D8%A7%D8%B3%D8%AA%DB%8C%D9%84-%D8%A7%D9%84%D8%A8%D8%B1%D8%B2.png" alt="" />
         </div>
         <div class="col-sm-6">
@@ -522,9 +522,10 @@
     </div>
     <!-- Brand -->
 
-    <a href="/product.html">نمونه صفحه نمایش محصولات</a>
-    <a href="/Brand product.html">نمونه صفحه برند محصولات</a>
-
+    <div class="links" style="display: flex; flex-direction: column; align-items: center; margin: 30px auto; border: 5px solid darkslategrey; background-color: darkslategrey; border-radius: 10px; max-width: 20%">
+      <a href="product.html" style="font-size: 20px; color: white; margin: 20px">نمونه صفحه نمایش محصولات</a>
+      <a href="Brand product.html" style="font-size: 20px; color: white; margin: 20px">نمونه صفحه برند محصولات</a>
+    </div>
     <!-- Footer -->
     <div class="mt-5 pt-5 pb-5 footer">
       <div class="container">
