--- a/product.html
+++ b/product.html
@@ -24,7 +24,7 @@
           </button>
           <div id="navbarContent" class="collapse navbar-collapse">
             <ul class="navbar-nav">
-              <li class="nav-item"><a href="/index.html" class="nav-link" style="color: black">صفحه اصلی</a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link" style="color: black">صفحه اصلی</a></li>
               <!-- Level one dropdown -->
               <li class="nav-item dropdown">
                 <a id="dropdownMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">یانان</a>
